[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["andrey <andrey8110@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.15.1"
django-filter = "^24.2"
django-debug-toolbar = "^4.4.2"
pillow = "^10.3.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
